@@ -1,3 +1,9 @@
+2008-03-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/35337
+	* semantics.c (finish_omp_clauses): Use %qD instead of %qE for
+	DECL_P in not a variable and appears more than once error messages.
+
 2008-03-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/35028
